--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "express": "^4.17.1",
         "knex": "^0.21.1",
         "multer": "^1.4.2",
-        "nodemon": "^2.0.3",
         "jsonwebtoken": "^8.5.1",
         "sqlite3": "^4.2.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
     },
     "scripts": {
         "dev": "nodemon main",
