upt package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Server",
+    "name": "server",
     "version": "1.0.0",
     "description": "backend server",
     "main": "src/server/server.js",
