--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     },
     "scripts": {
         "dev": "nodemon main",
-        "start": "node main"
+        "start": "node src/server/server.js"
     }
 }
