--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
         "express": "^4.17.1",
         "knex": "^0.21.1",
         "multer": "^1.4.2",
-        "nodemon": "^2.0.3",
         "jsonwebtoken": "^8.5.1",
         "sqlite3": "^4.2.0"
     },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
+    },
     "scripts": {
-        "start": "node main"
+        "dev": "nodemon main",
+        "start": "node src/server/server.js"
     }
 }
